--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@capacitor/android": "3.5.1",
-    "@capacitor/app": "1.1.1",
+    "@capacitor/app": "^1.1.1",
     "@capacitor/core": "3.5.1",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/keyboard": "^1.2.2",
+    "@capacitor/status-bar": "^1.0.8",
     "@ionic/angular": "^6.1.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -42,6 +42,7 @@
     "@angular/language-service": "^14.0.0",
     "@capacitor/cli": "3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/cli": "6.20.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
